--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>slider4</title>
+    <title>slider4 branch_2</title>
     <link rel="stylesheet" href="./slider4.css">
 </head>
 
